test_suite/alan-2022-examples/failing/003970_mutation.alan
source j7 begin leave(54) + end
